tests/models/i8/fail/validate.rs
use dade::model;
#[model]
struct TestModel {
    #[field(validate = 2)]
    value: i8,
}
fn main() {}
